<!-- Application strings and string-array resources -->
<resources>
    <!-- General strings -->
    <string name="app_name">Sysho</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="saved_lists">Saved Lists</string>
    <string name="add_delete_product">Add/Delete Product</string>
    <string name="add_delete_store">Add/Delete Store</string>
    <string name="modify_prices">Modify Prices</string>
    <string name="results">Results</string>
    <string name="update">Update</string>
    <string name="update_price">Update Price</string>
    <string name="current_price">Current Price: </string>
    <string name="sale_price">Sale Price: </string>
    <string name="app_logo">app_logo</string>

    <!-- User-related strings -->
    <string name="not_signed_in">Not Signed In</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_display">User Logged In: %1$s</string>

    <!-- Sample search database -->
    <string-array name="search_ex_database">
        <item>Bananas</item>
        <item>Oranges</item>
        <item>Watermelon</item>
        <item>Strawberries</item>
        <item>Cherries</item>
        <item>Cookies</item>
    </string-array>

    <!-- Placeholder string -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Other strings -->
    <string name="ready_to_shop">Ready to Shop</string>
    <string name="delete_btn">Delete</string>
    <string name="store_database">Store Database</string>
    <string name="product_database">Product Database</string>
    <string name="update_price_dialog">Update Price</string>
    <string name="activate_sale_dialog">Activate Sale</string>
    <string name="price_sweep_dialog">Price Sweep</string>
    <string name="randomize_pricing_dialog">Randomize Pricing</string>
    <string name="this_will_place_all_prices_in_the_database_on_sale_by_the_percentage_provided_and_cannot_be_undone_proceed">This will place all prices in the database on sale by the percentage provided and cannot be undone. Proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="percentSign">%</string>
    <string name="confirm">Confirm</string>
    <string name="this_will_lower_all_prices_in_the_database_by_the_percentage_provided_and_cannot_be_undone_proceed">This will lower all prices in the database by the percentage provided and cannot be undone. Proceed?</string>
    <string name="Unkown_Item">Unknown Item</string>
    <string name="this_will_increase_all_prices_in_the_database_by_the_amount_set_proceed">This will increase all prices in the database by the amount set. Proceed?</string>
    <string name="store_image">store image</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
</resources>